# ndm_test_2_client

./: CMakeLists.txt  NDM_TEST_2_CLIENT.kdev4  README.md  main.cpp
inc/: genlclient.hpp
src/: genlclient.cpp
